<resources>
    <string name="app_name">Estagario</string>
    <string name="loginPessoalImagem">Imagem de logo para a tela de login</string>
    <string name="loginPessoalConfirmar">Login</string>
    <string name="loginPessoalCadastrar">Cadastre-se</string>
    <string name="loginPessoalUsuario">Usuário (e-mail)</string>
    <string name="loginPessoalSenha">Senha</string>
    <string name="cadastroPessoalNome">Nome</string>
    <string name="cadastroPessoalLogradouro">Logradouro</string>
    <string name="cadastroPessoalCidade">Cidade</string>
    <string name="cadastroPessoalImagem">Imagem do usuário</string>
    <string name="cadastroPessoalEmail">E-mail</string>
    <string name="cadastroPessoalNumero">(DDD) Número</string>
    <string name="cadastroPessoalUsuario">Usuário</string>
    <string name="cadastroPessoalSenha">Senha</string>
    <string name="cadastroPessoalEstado">Estado</string>
    <string name="cadastroPessoalConfirmar">CADASTRAR</string>
    <string name="fontName">sans-serif-condensed</string>
    <string-array name="cadastroPessoalEstados">
        <item></item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>
